--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
 	<!--<script src="http://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>-->
 	<!--<script src="js/text.js"></script>	 text del cpu-->
 	<script src="js/particles.js"></script>	
-	<script async src="https://www.googletagmanager.com/gtag/js?id=<G-K67NP9KZ4C>"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K67NP9KZ4C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K67NP9KZ4C');
+</script>
+
 </head>
 <body>
 	<div class="box">
@@ -47,18 +56,20 @@
 								<li><a href="https://join.skype.com/invite/bPJSM7SY5cDT" target="_Ьlank"><img src="img/logo/skype.svg" class="con"></a></li>
 							</ul>
 						</div>					
-	</div>	
+		</header>
 			</nav>
 				<div class="text">
 					<h2 class="twotext">
 						<b>GoodAnim</b> - создадим топовый ролик!
 					</h2>
-				</div>
-	<div class="rectangle">
+	
+				</div>			
+	
+		<div class="rectangle">
 			<video autoplay muted preload loop class="movbg">
 				 <source src="video/comp.mp4" type='video/mp4;'>
 			</video>
-		</header>
+		</div>
 	</div>
 			<div id="boxtwo">
 						<div id="tsparticles"></div>
