--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 	<!--<script src="js/text.js"></script>	 text del cpu-->
 	<script src="js/particles.js"></script>	
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K67NP9KZ4C"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RW8YFW4ZC8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-K67NP9KZ4C');
+  gtag('config', 'G-RW8YFW4ZC8');
 </script>
 </head>
 <body>
