--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>GoodAnim - Качественная анимация</title>
 	<meta charset="utf-8">
 	<meta name='description' content="Анимациооный ролик,реклама,бюджетный ролик">
-	<link rel="icon" href="img/logo/logo.svg">
+	<link rel="icon" href="img/logo/logo_blue.svg">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">	
 	<link rel="stylesheet" href="css/player.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">	
