--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<li><a href="mailto:goodanim@mail.ru" target="_Ьlank"><img src="img/logo/mail.svg" class="con"></a></li><!--https://goodanim@mail.ru-->
 								<li><a href="https://www.messenger.com/t/sasha.arbuzov.90" target="_Ьlank"><img src="img/logo/fm.svg" class="con"></a></li>
 								<li><a href="https://vk.com/id557716967" target="_Ьlank"><img src="img/logo/vk.svg" class="con"></a></li>
-								<li><a href=""><img src="img/logo/discord.svg" class="con"></a></li>
+								<!--<li><a href=""><img src="img/logo/discord.svg" class="con"></a></li>-->
 								<li><a href="https://join.skype.com/invite/bPJSM7SY5cDT" target="_Ьlank"><img src="img/logo/skype.svg" class="con"></a></li>
 							</ul>
 						</div>					
@@ -92,7 +92,7 @@
 										<li><a href="mailto:goodanim@mail.ru" target="_Ьlank"><img src="img/logo/mail.svg" class="con"></a></li><!--https://goodanim@mail.ru-->
 										<li><a href="https://www.messenger.com/t/sasha.arbuzov.90" target="_Ьlank"><img src="img/logo/fm.svg" class="con"></a></li>
 										<li><a href="https://vk.com/id557716967" target="_Ьlank"><img src="img/logo/vk.svg" class="con"></a></li>
-										<li><a href=""><img src="img/logo/discord.svg" class="con"></a></li>
+										<!--<li><a href=""><img src="img/logo/discord.svg" class="con"></a></li>-->
 										<li><a href="https://join.skype.com/invite/bPJSM7SY5cDT" target="_Ьlank"><img src="img/logo/skype.svg" class="con"></a></li>
 									</ul>
 							И получите классный ролик!
@@ -106,7 +106,7 @@
 						<h2 class="text4h2">Промо</h2>
 					</div>
 				<div class="block2">
-					<video controls="" class="mov" width="100%" data-poster="img/promo.png" > <!--autoplay="true"-->
+					<video controls="" class="mov" width="100%" data-poster="img/promo2.png" > <!--autoplay="true"-->
 						<source src="video/goodanim.mp4" type='video/mp4;'>
 					</video>
 				</div>
