--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>GoodAnim - Качественная анимация</title>
 	<meta charset="utf-8">
 	<meta name='description' content="Анимациооный ролик,реклама,бюджетный ролик">
+	<meta name="msvalidate.01" content="85412FB0306D4A530973B10E6970DD07" /> <!--bing-->
 	<link rel="icon" href="img/logo/logo_blue.svg">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">	
 	<link rel="stylesheet" href="css/player.css" />
