--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				</div>
 				
 		</div>
-		<div class="youtube"> Другие ролики на<a href="https://www.youtube.com/playlist?list=PLJUgKpHQ84PWapAHnfLXvpKGfbDG3C-5J" target="_Ьlank"><img src="img/logo/youtube.svg" class="con" width="130px"></a></div>
+		<div class="youtube"> Другие ролики на<a href="https://www.youtube.com/watch?v=pSViRA1m1Vc&list=PLJUgKpHQ84PWapAHnfLXvpKGfbDG3C-5J&index=1" target="_Ьlank"><img src="img/logo/youtube.svg" class="con" width="130px"></a></div>
 </div>					
 </div>
 
