--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name='description' content="Анимациооный ролик,реклама,бюджетный ролик">
 	<meta name="msvalidate.01" content="85412FB0306D4A530973B10E6970DD07" /> <!--bing-->
 	<meta name='wmail-verification' content='b59156ca52b06d828417830ddac359d2' /> <!--mail-->
-	<link rel="icon" href="img/logo/logo_blue.svg">
+	<link rel="icon" href="img/logo/logo_blue.svg" type="image/svg">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">	
 	<link rel="stylesheet" href="css/player.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">	
