--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>GoodAnim - Качественная анимация</title>
+	<title>Анимационный видео ролик заказать.Студия GoodAnim</title>
 	<meta charset="utf-8">
 	<meta name='description' content="Анимациооный ролик,реклама,бюджетный ролик">
 	<meta name="msvalidate.01" content="85412FB0306D4A530973B10E6970DD07" /> <!--bing-->
@@ -29,6 +29,15 @@
 
   gtag('config', 'G-RW8YFW4ZC8');
 </script>
+<style type="text/css">
+	a{
+		color:white;
+		text-decoration:none;
+	}
+	a:hover{
+		color: grey;
+	}
+</style>
 </head>
 <body>
 	<div class="box">
@@ -51,6 +60,7 @@
 							<ul class="doc">
 								<li><a href="https://t.me/goodanim" target="_Ьlank"><img src="img/logo/tg.svg" class="con"></a></li>
 								<li><a href="mailto:goodanim@mail.ru" target="_Ьlank"><img src="img/logo/mail.svg" class="con"></a></li><!--https://goodanim@mail.ru-->
+								<li><a href="https://us05web.zoom.us/s/6658302896" target="_Ьlank"><img src="img/logo/zoom.svg" class="con"></a></li>
 								<li><a href="https://www.messenger.com/t/sasha.arbuzov.90" target="_Ьlank"><img src="img/logo/fm.svg" class="con"></a></li>
 								<li><a href="https://vk.com/id557716967" target="_Ьlank"><img src="img/logo/vk.svg" class="con"></a></li>
 								<!--<li><a href=""><img src="img/logo/discord.svg" class="con"></a></li>-->
@@ -61,7 +71,7 @@
 			</nav>
 				<div class="text">
 					<h2 class="twotext">
-						<b>GoodAnim</b> - создадим топовый ролик!
+						<b>GoodAnim</b> - создадим топовый ролик! 
 					</h2>
 	
 				</div>			
@@ -84,20 +94,21 @@
 					<h2>Нужен рекламный ролик?</h2>
 					</div>
 					<div class="text3">
-						<h2 class="h2text3">Мы создаём качественные<br>
-							продающиеся ролики под ключ<br>
+						<h2 class="h2text3">Мы создаём <b>качественные</b><br>
+							<b>продающиеся</b> ролики "<b>под ключ</b>"<br>
 							Выберите понравившийся вам стиль<br>
 							Свяжитесь с нами любым удобным <br>
 							для вас способом							
 									<ul class="doc">
 										<li><a href="https://t.me/goodanim" target="_Ьlank"><img src="img/logo/tg.svg" class="con"></a></li>
 										<li><a href="mailto:goodanim@mail.ru" target="_Ьlank"><img src="img/logo/mail.svg" class="con"></a></li><!--https://goodanim@mail.ru-->
+										<li><a href="https://us05web.zoom.us/s/6658302896" target="_Ьlank"><img src="img/logo/zoom.svg" class="con"></a></li>
 										<li><a href="https://www.messenger.com/t/sasha.arbuzov.90" target="_Ьlank"><img src="img/logo/fm.svg" class="con"></a></li>
 										<li><a href="https://vk.com/id557716967" target="_Ьlank"><img src="img/logo/vk.svg" class="con"></a></li>
 										<!--<li><a href=""><img src="img/logo/discord.svg" class="con"></a></li>-->
 										<li><a href="https://join.skype.com/invite/bPJSM7SY5cDT" target="_Ьlank"><img src="img/logo/skype.svg" class="con"></a></li>
 									</ul>
-							И получите классный ролик!
+							<a href="json/index.html"><b><h2>JSON анимация</h2></b></a>
 						</h2>
 					</div>
 					</div>
@@ -133,7 +144,7 @@
 		</div>
 		<div class="align2">
 				<div class="mainbutton">
-					<h4>Infographic</h4>
+					<h4>Premium / Infographic</h4> 
 					<div class="button3 zat"></div>
 				</div>
 				<div class="mainbutton">
@@ -142,7 +153,7 @@
 				</div>
 				
 		</div>
-		<div class="youtube"> Другие ролики на<a href="https://www.youtube.com/watch?v=pSViRA1m1Vc&list=PLJUgKpHQ84PWapAHnfLXvpKGfbDG3C-5J&index=1" target="_Ьlank"><img src="img/logo/youtube.svg" class="con" width="130px"></a></div>
+		<div class="youtube"> Другие ролики на<a href="https://www.youtube.com/playlist?list=PLJUgKpHQ84PWapAHnfLXvpKGfbDG3C-5J" target="_Ьlank"><img src="img/logo/youtube.svg" class="con" width="130px"></a></div>
 </div>					
 </div>
 
