--- a/json/page.html
+++ b/json/page.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <!--<meta http-equiv="Refresh" content="5" />-->
 <head>
+	<link rel="icon" href="../img/logo/logo_blue.svg" type="image/svg">
     <style>
 html{
     cursor: url("../css/blnd_arrow.cur"),auto; 
