--- a/json/page.html
+++ b/json/page.html
@@ -3,6 +3,7 @@
 <!--<meta http-equiv="Refresh" content="5" />-->
 <head>
 	<link rel="icon" href="../img/logo/logo_blue.svg" type="image/svg">
+	<title>Анимация для сайто</title>
     <style>
 html{
     cursor: url("../css/blnd_arrow.cur"),auto; 
