--- a/json/page.html
+++ b/json/page.html
@@ -205,7 +205,53 @@ a{
             margin-left: 300px;
             width: 100px;
             height: 100px;
-        }          
+        } 
+        .eight{
+        	width: 1800px;
+        	height: 500px;
+        	margin: auto;
+        }         
+         #net{
+            width:900px;
+            float: left;            
+      		margin-top: 0px;
+      		margin-left: -4%;
+        } 
+        #nettext{
+            width:950px;
+            margin-top: 7%;
+            margin-bottom: 0%;
+            background: rgba(0, 0, 0, 0.7);       
+            float: right;
+            border-radius: 30px;
+        } 
+        .nine{
+        	width: 1800px;
+        	height: 500px;
+        	margin: auto;
+        	margin-top: 90px;
+        }         
+         #doc{
+            width:800px;
+            float: left;            
+      		margin-top: 0px;
+      		margin-left: -4%;
+        } 
+        #doctext{
+            width:950px;
+            margin-top: 6%;
+            margin-bottom: 0%;
+            background: rgba(0, 0, 0, 0.7);       
+            float: right;
+            border-radius: 30px;
+        }        
+        #unica{
+		color:  white;
+		text-decoration: none
+        }   
+        #unica:hover{
+	color:  #181819;
+}         
     </style>
 </head>
 <body>
@@ -226,6 +272,14 @@ a{
 <div class="tree">
 	<div id="phone"></div>
 	<div id="phonetext"><h2>Анимация экрана телефона,как в iPhone. Появление сообщений.<br>JSON устанавливался на webflow сайте.</h2></div>
+</div>
+<div class="eight">
+	<div id="net"></div>
+	<div id="nettext"><h2>Анимация для сайта: <a href="http://unikatest.unikatest.site" id="unica" target="_blank">Unika</a> <br></h2></div>
+</div>
+<div class="nine">
+	<div id="doc"></div>
+	<div id="doctext"><h2>Анимация документов, какие нужно приложить, для сайта на WP<br></h2></div>
 </div>
 <div class="for">
 	<div id="ata"></div>
@@ -250,6 +304,8 @@ a{
 <script src="codart.json"></script>
 <script src="capylab.json"></script>
 <script src="po.json"></script>
+<script src="net.json"></script>
+<script src="doc.json"></script>
 <script src="cit.json"></script>
 <script src="ata.json"></script>
 <script src="HandmadeCo.json"></script>
