--- a/json/page.html
+++ b/json/page.html
@@ -89,7 +89,7 @@
             max-width: 4%;
             max-height: 6%;
         }
-        /*img{display: none;}/*Видимость кнопки Назад*/
+        img{display: none;}/*Видимость кнопки Назад*/
         @media (min-width: 768px) {
             .section {
                 flex-direction: row;
