--- a/json/page.html
+++ b/json/page.html
@@ -1,6 +1,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <meta charset="UTF-8">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RW8YFW4ZC8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RW8YFW4ZC8');
+</script>
     <link rel="icon" href="../img/logo/logo_blue.svg" type="image/svg">
     <title>Анимация для сайто</title>
     <style>
